<resources>
    <string name="app_name">Enbalde</string>
    <string name="title_home">Home</string>
    <string name="title_catalogue">Catalogue</string>
    <string name="title_cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <!-- Strings related to login & signup-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_up">Registrarse</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenid@!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>
    <string name="prompt_username">Usuario</string>
    <string name="prompt_fname">Nombre</string>
    <string name="prompt_lname">Apellido</string>
    <string name="prompt_address">Direccion</string>
    <string name="prompt_phone">Numero de teléfono</string>
    <string name="new_user">Quiero registrarme</string>
    <string name="prompt_registered_user">Ya tengo una cuenta</string>
    <string name="admin_login_not_allowed">No puedes iniciar sesión como administrador</string>
    <string name="description">Descripción</string>
    <string name="our_ice_creams">Nuestros helados</string>
    <string name="order">Su Pedido</string>
    <string name="content">texto de pedido</string>
    <string name="content_image">imagen de helado</string>
    <string name="content_price">Precio del helado</string>
    <string name="eliminar">Eliminar</string>
    <string name="pagar">Pagar</string>
    <string name="login">Iniciar sesión</string>
    <string name="checkin">Registrarse</string>
    <string name="forgot_password">Si no puede recordar su clave ingrese su e-mail a continuación para recibir un token para cambiarla.</string>
    <string name="enter_your_email">Ingrese su correo</string>
    <string name="text_text">Le enviaremos un mensaje para reestablecer su nueva contraseña.</string>
    <string name="Botton_1">Enviar código</string>
    <string name="Pay">Pagar</string>
    <string name="Total_to_pay">Pagar</string>
    <string name="Money">1500</string>
    <string name="payment_method">Por favor seleccione a continuación un método de pago</string>
    <string name="payment_method_1">MÉTODOS DE PAGO</string>
    <string name="tarjet1">Tarjeta de Crédito</string>
    <string name="tarjeta2">Transferencia</string>
    <string name="pay_1">PAGO</string>
    <string name="efective">Efectivo</string>
    <string name="reset_password">Cambiar clave</string>
    <string name="my_profile">Mi perfil</string>
    <string name="my_orders">Mis ordenes</string>
    <string name="notification">Notificaciones</string>
    <string name="save">Guardar</string>
    <string name="content_logo">Logo</string>
    <string name="forgot_password2">Olvidé mi clave</string>
    <string name="money">$200</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="loading1">cargando</string>
    <string name="loading2">Cargando</string>
    <string name="cantidad">1</string>
    <string name="icecream">helado</string>
    <string name="fondo">fondo</string>
    <string name="new_password">Nueva Clave</string>
    <string name="send_me_a_token">Send me a token</string>
    <string name="token_and_new_password">"A continuación ingrese el token que recibió por correo y la nueva clave que desea usar."</string>
    <string name="token">Token</string>
    <string name="content_image2">Content Imagen</string>
    <string name="recoverToken_contentDescription">Recover Token</string>
    <string name="recoverEmail">Recuperar Email</string>
    <string name="recoverToken">Recuperar Token</string>
    <string name="recoverPassword">Recuperar contraseña</string>
    <string name="recover_password_hint">Enter your new password</string>
    <string name="recover_email_hint">Enter your email address</string>
    <string name="recovery_token_hint">Enter your recovery token</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="old_password">Clave Vieja</string>
    <string name="new_password2">Clave Nueva</string>
    <string name="repeat_password">Repetir Clave</string>
    <string name="last_name_hint">Enter your last name</string>
    <string name="old_password_hint">Enter your old password</string>
    <string name="email_hint">Enter your email</string>
    <string name="first_name_hint">Enter your first name</string>
    <string name="phone_number_hint">Enter your phone number</string>
    <string name="address_hint">Enter your address</string>
    <string name="username_hint">Enter your username</string>
    <string name="repeat_password_hint">Enter your password again</string>
    <string name="content_catalogue">No data available</string>
    <string name="background">Imagen de fondo</string>
    <string name="contact">Contacto</string>
    <string name="name">Nombre</string>
    <string name="issue">Asunto</string>
    <string name="message">Mensaje</string>
    <string name="send">Enviar</string>
    <string name="name_hint">Escribe tu nombre aquí</string>
    <string name="email_hint2">Escribe tu email aquí</string>
    <string name="issue_hint">Escribe tu asunto aquí</string>
    <string name="message_hint">Escribe tu mensaje aquí</string>
    <string name="perfil">Perfil</string>
    <string name="toque_aqui_si_quiere_contactarnos">Toque aquí si quiere contactarnos</string>
    <string name="rdenes_pasadas">Órdenes Pasadas</string>
    <string name="carrito">Carrito</string>
    <string name="comprar">Comprar</string>
    <string name="el_carrito_est_vacio">El carrito está vacío</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="pago">Pago</string>
    <string name="envio">Envío</string>
    <string name="total">Total</string>
    <string name="efectivo">Efectivo</string>
    <string name="stripe">Tarjeta de Crédito (vía Stripe)</string>
    <string name="flecha_para_abajo">Flecha para abajo</string>
    <string name="web_link">Visitar Web</string>
    <string name="repo_link">Ver repositorio</string>
</resources>
