<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_catalogue"
        android:icon="@drawable/baseline_icecream_24"
        android:title="@string/title_catalogue" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:visible="false"
        android:title="Profile" />

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/baseline_person_24"
        android:title="Login" />

</menu>