<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_recover_id"
    tools:context=".ui.recover.RecoverPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingBottom="?attr/actionBarSize"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/loginBackgroundImageView"
            android:layout_width="412dp"
            android:layout_height="616dp"
            android:contentDescription="@string/background"
            android:fillViewport="true"
            android:scaleType="fitXY"
            android:src="@drawable/bg_catalogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/recoverLogoImageView"
            android:layout_width="123dp"
            android:layout_height="96dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/logo_text"
            android:contentDescription="@string/content_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/loginBackgroundImageView" />

        <TextView
            android:id="@+id/recoverAlreadyAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/login"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoverResetPasswordButton" />

        <TextView
            android:id="@+id/recoverEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoverLogoImageView"
            tools:ignore="LabelFor" />

        <ImageView
            android:id="@+id/recoverMailImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:minWidth="50dp"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoverEmailTextView"
            app:srcCompat="@android:drawable/ic_dialog_email"
            android:contentDescription="@string/content_image2" />

        <EditText
            android:id="@+id/recoverEmailEditText"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_input"
            android:hint="@string/recover_email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/recoverMailImageView"
            app:layout_constraintTop_toBottomOf="@+id/recoverEmailTextView"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/recoverButtonEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/button"
            android:minWidth="150dp"
            android:text="@string/send_me_a_token"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoverEmailEditText" />

        <TextView
            android:id="@+id/recoverInsertTokenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/token_and_new_password"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoverButtonEmail" />

        <TextView
            android:id="@+id/recoverTokenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:text="@string/token"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoverInsertTokenTextView" />

        <EditText
            android:id="@+id/recoverTokenEditText"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/recovery_token_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/recoverTokenTextView"
            app:layout_constraintTop_toBottomOf="@+id/recoverInsertTokenTextView"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/recoverPasswordEditText"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_input"
            android:hint="@string/recover_password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintStart_toEndOf="@+id/recoverNewPasswordTextView"
            app:layout_constraintTop_toBottomOf="@+id/recoverTokenEditText"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/recoverNewPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/new_password"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoverTokenTextView" />

        <Button
            android:id="@+id/recoverResetPasswordButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/button"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoverPasswordEditText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>