<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_register_id"
    tools:context=".ui.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="?attr/actionBarSize"
        android:background="@color/grey">

        <ImageView
            android:id="@+id/registerBackgroundImageView"
            android:layout_width="412dp"
            android:layout_height="913dp"
            android:contentDescription="@string/background"
            android:fillViewport="true"
            android:scaleType="fitXY"
            android:src="@drawable/bg_catalogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/registerLogoImageView"
            android:layout_width="123dp"
            android:layout_height="96dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/logo_text"
            android:contentDescription="@string/content_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/registerBackgroundImageView" />

        <EditText
            android:id="@+id/registerFirstNameEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:minHeight="45dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/custom_input"
            android:autofillHints="@string/prompt_fname"
            android:hint="@string/prompt_fname"
            android:inputType="text|textPersonName"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerLogoImageView"
            app:layout_constraintWidth_max="488dp"/>

        <EditText
            android:id="@+id/registerLastNameEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:minHeight="45dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:autofillHints="@string/prompt_lname"
            android:hint="@string/prompt_lname"
            android:inputType="text|textPersonName"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerFirstNameEditText"
            app:layout_constraintWidth_max="488dp"/>

        <EditText
            android:id="@+id/registerEmailEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:minHeight="45dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerLastNameEditText"
            app:layout_constraintWidth_max="488dp"/>

        <EditText
            android:id="@+id/registerAddressEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:minHeight="45dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:autofillHints="@string/prompt_address"
            android:hint="@string/prompt_address"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerEmailEditText"
            app:layout_constraintWidth_max="488dp"/>

        <EditText
            android:id="@+id/registerUsernameEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:minHeight="45dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:autofillHints="@string/prompt_username"
            android:hint="@string/prompt_username"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerAddressEditText"
            app:layout_constraintWidth_max="488dp"/>

        <EditText
            android:id="@+id/registerPasswordEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:minHeight="45dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:inputType="text|textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerUsernameEditText"
            app:layout_constraintWidth_max="488dp"/>

        <EditText
            android:id="@+id/registerPhoneEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:minHeight="48dp"
           android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:autofillHints="@string/prompt_phone"
            android:hint="@string/prompt_phone"
            android:inputType="text|phone"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditText"
            app:layout_constraintWidth_max="488dp"/>


        <Button
            android:id="@+id/buttonRegisterAccount"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/button"
            android:text="@string/action_sign_up"
            android:minWidth="200dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPhoneEditText" />

        <TextView
            android:id="@+id/registrationAlreadyAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="45dp"
            android:textColor="@color/blue"
            android:clickable="true"
            android:textStyle="bold"
            android:text="@string/prompt_registered_user"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegisterAccount"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
